--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 
   # Activate credentials from google IAM account and authorize access
   #   Credentials are stored in the service-account.json file
-  - glcoud auth activate-service-account --key-file service-account.json
+  - gcloud auth activate-service-account --key-file service-account.json
 
   # Configure the gcloud CLI to use the proper project
   - gcloud config set project fibonacci-k8s-230004
