--- a/kube/worker-deployment.yml
+++ b/kube/worker-deployment.yml
@@ -15,10 +15,10 @@ spec:
       containers:
         - name: worker
           image: scottcollins/fibonacci-worker
-          resources:
-            limits:
-              cpu: 100m
-              memory: 100Mi
+          # resources:
+          #   limits:
+          #     cpu: 100m
+          #     memory: 100Mi
           env:
             - name: REDIS_HOST
               valueFrom: 
